@@ -76,6 +76,14 @@
   <translation type="gettext">gnome-calculator</translation>
   <content_rating type="oars-1.1" />
   <releases>
+    <release version="44~rc" date="2023-03-03" type="development">
+      <description>
+        <p>Overview of changes in gnome-calculator 44.rc</p>
+        <ul>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="44~beta" date="2023-02-11" type="development">
       <description>
         <p>Overview of changes in gnome-calculator 44.beta</p>
