@@ -1,3 +1,6 @@
+Overview of changes in gnome-calculator 44.rc
+    * Updated translations
+
 Overview of changes in gnome-calculator 44.beta
     * Updated translations
     * Improved factorization !141 (J. Sory)
